--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/code.svg" />
+    <link rel="stylesheet" href="./assets/output.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Max Portfolio</title>
   </head>
